<resources>
    <string name="app_name">ITHouseStart</string>
    <string name="btn_change_text">Change text</string>
    <string name="edit_text_enter_your_nike">Enter your nick</string>
    <string name="edit_text_password">Password</string>
    <string name="edit_text_confirm_password">Confirm password</string>
    <string name="btn_register">Register</string>

    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMulti">*</string>
    <string name="btnDavide">/</string>
    <string name="btnEnd">=</string>
    <string name="btnC">C</string>
    <string name="menu_item_notification_settings">Notification Settings</string>
    <string name="menu_item_exit">Exit</string>
    <string name="context_menu_item_copy">Copy</string>
    <string name="context_menu_item_paste">Paste</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="hint_enter_your_nick">Enter your nick</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="btn_text_login">LogIn</string>
    <string name="btn_text_sing_up">Sing up</string>
    <string name="main_activity_edit_text_input_your_message">Input your message</string>
    <string name="register_activity_name">Register</string>
    <string name="text_view_user_name">User Name</string>
    <string name="start_icon">start icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_home_title">Home</string>
    <string name="fragment_gallery_title">Gallery</string>
    <string name="fragment_home_text_view_greetings">Hello its`s home fragment!!!</string>
    <string name="title_activity_drawer">DrawerActivity</string>

</resources>
