<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.woodman.androidstart.Activity.RegisterActivity">

    <EditText
        android:id="@+id/editTextNick"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit_text_enter_your_nike" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/edit_text_confirm_password" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/radio_sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_male"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radio_sex_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_female"
            />

    </RadioGroup>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:text="@string/btn_register"
        android:textColor="#fff"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/show_text"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp" />

</LinearLayout>
